Fixed alignment

--- a/style.css
+++ b/style.css
@@ -69,9 +69,8 @@ tooltip {
 #workspaces {
     background: rgba(30,30,46,0.6);
     border-radius: 10px;
-    margin-left: 10px;
-    padding-right: 0px;
-    padding-left: 5px;
+    margin-left: 5px;
+    padding: 0px;
 }
 
 #window {
